# noko

./: .gitignore  CMakeLists.txt  Makefile  README.md  meson.build
desktop/: CMakeLists.txt  homescreen.cc  homescreen.h  homscreen.h  main.c  main.cc  main.h  sdl_clay.c  sdl_clay.h  utils.c  utils.cc  utils.h
docs/: index.html  noko-desktop.data  noko-desktop.js
protocols/: meson.build
src/: CMakeLists.txt  main.c  main.cc  main.h  map.h  meson.build
subprojects/: wlroots.wrap
webport/: index.html
